re PR tree-optimization/16876 (ICE on testcase with -O3 in fold-const)

gcc:
	PR tree-optimization/16876
	* c-typeck.c (c_convert_parm_for_inlining): Don't take early
	exit if PARM doesn't match VALUE.

testsuite:
	gcc.dg/noncompile/pr16876.c: New test.

From-SVN: r116424