gcc/testsuite/gcc.dg/pr29254.c
@@ -1,6 +1,5 @@
 /* { dg-do compile } */
 /* { dg-options "-O3 -Werror" } */
-/* { dg-message "warnings being treated as errors" "" {target "*-*-*"} 0 } */
 
 list_compare (int * list1)
 {
@@ -18,5 +17,5 @@ value_compare (int * a)
 
 func2 (const int * fb)
 {
-  func1 ((int *) fb); /* { dg-error "discards qualifiers" } */
+  func1 ((int *) fb); /* { dg-bogus "discards qualifiers" } */
 }
